# PolyGen

./: LICENSE  README.md  install
benchmark/CLIA_benchmark/: LinExpr_inv1_ex.sl  LspPage9_1.sl  LspPage9_2.sl  array_sum_10_15.sl  array_sum_10_5.sl  array_sum_4_5.sl  array_sum_5_5.sl  array_sum_6_15.sl  array_sum_6_5.sl  array_sum_7_15.sl  array_sum_7_5.sl  array_sum_8_15.sl  array_sum_8_5.sl  array_sum_9_15.sl  array_sum_9_5.sl  balanced.sl  count1s.sl  dropwhile.sl  issorted.sl  linesight.sl  max15.sl  max1s.sl  max1spos.sl  max1spos_reduce.sl  (+9 more)
exp/: config.py  esolver_runner.py  euphony_runner.py  eusolver_runner.py  example_model.py  mysolver_runner.py  parser.py  run_exp  runner.py  set_train.py  split_dataset.py  util.py
src/: CMakeLists.txt
src/basic/: bitset.cpp  bitset.h  config.cpp  config.h  data.cpp  data.h  grammar.cpp  grammar.h  program.cpp  program.h  recorder.cpp  recorder.h  semantics.cpp  semantics.h  semantics_factory.cpp  semantics_factory.h  util.cpp  util.h  value.h
src/cmake/: FindGUROBI.cmake
src/main/: main.cpp
src/parser/: parser.cpp  parser.h  parser_test.cpp  specification.cpp  specification.h
src/parser/python/: main.py
src/solver/: clia_solver.cpp  clia_solver.h  decision_tree_unifier.cpp  decision_tree_unifier.h  enumerate_term_solver.cpp  enumerate_term_solver.h  enumerator.cpp  enumerator.h  ilp_term_solver.cpp  ilp_term_solver.h  optimized_ilp_term_solver.cpp  optimized_ilp_term_solver.h  optimized_unifier.cpp  optimized_unifier.h  sygus_solver.cpp  sygus_solver.h  term_solver.cpp  term_solver.h  unifier.cpp  unifier.h
(+128 files in other folders)
